--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -76,5 +76,7 @@
 
     <!-- Introductory Overlay -->
     <string name="ccl_intro_overlay_button_text">@android:string/ok</string>
+    <string name="channel_name">Chromecast notification</string>
+    <string name="channel_description">Show chromecast actions</string>
 
 </resources>
